Corrected content overflow in CSS

--- a/styles/board_task_overlay.css
+++ b/styles/board_task_overlay.css
@@ -115,15 +115,12 @@
 .add-task-wrapper {
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-width: 1116px;
   padding: 64px;
   margin: auto;
   background-color: var(--white-color);
   border-radius: 30px;
-}
-
-.add-task-overlay-content {
-  width: 1116px;
 }
 
 /*-------------- */
